log
Tue, May 13, 2025  2:41:38 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before ':' token
   int i,j :
           ^
sudoku.c:58:25: error: 'vacia' undeclared (first use in this function)
   for(i = 0 ; i < 9 && !vacia; i++ ){
                         ^~~~~
sudoku.c:58:25: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:9: error: 'j' undeclared (first use in this function)
     for(j = 0 ; j < 9 && !vacia ; j++ ){
         ^
3f0e54c
Tue, May 13, 2025  2:43:34 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9a31d1b
Tue, May 13, 2025  3:05:49 PM: 
 sudoku.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:43: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for(int j = 0 ; i < 9 && columna == -1, j++){
                                           ^
sudoku.c:58:48: error: expected ';' before ')' token
     for(int j = 0 ; i < 9 && columna == -1, j++){
                                                ^
cc1.exe: all warnings being treated as errors
39063e8
Tue, May 13, 2025  3:06:37 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
647efad
Tue, May 13, 2025  3:08:59 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
7c015b9
Tue, May 13, 2025  3:09:56 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
f224071
